Disabling paste on upload and providing a better UX #4312

--- a/src/app/modules/composer/components/base/base.component.html
+++ b/src/app/modules/composer/components/base/base.component.html
@@ -5,7 +5,7 @@
   "
   m-dragAndDrop
   (onFileDropped)="onAttachmentPaste($event)"
-  [disabled]="(remind$ | async) ? true : false"
+  [disabled]="(disableAttachments$ | async) ? true : false"
 >
   <div class="m-composerBase__container">
     <m-composer__titleBar
