--- a/src/app/common/layout/v3-topbar/v3-topbar.component.ng.scss
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.ng.scss
@@ -10,7 +10,8 @@
   .m-v3Topbar__middleColumn {
     position: relative;
   }
-  .m-v3Topbar__searchBox {
+  .m-v3Topbar__searchBox,
+  .m-v3Topbar__rightColumn {
     z-index: 2;
   }
 }
