--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -6,7 +6,7 @@
     <!-- ----------------------------------------- -->
     <!-- TOOLBAR -->
     <!-- ----------------------------------------- -->
-    <div class="m-channelFeed__toolbar">
+    <div class="m-channelFeed__toolbar" #feedToolbarEl>
       <m-feedFilter
         class="m-channelFeed__filter"
         [options]="['type']"
