--- a/src/app/modules/discovery/feeds/feeds-list.component.html
+++ b/src/app/modules/discovery/feeds/feeds-list.component.html
@@ -1,4 +1,4 @@
-<div class="m-discoveryFeeds__feed">
+<div class="m-discoveryFeeds__feed" #feedEl>
   <m-discovery__feedItem
     *ngFor="let entity$ of entities$ | async"
     [entity]="entity$ | async"
