--- a/src/app/modules/discovery/search/search.component.html
+++ b/src/app/modules/discovery/search/search.component.html
@@ -1,7 +1,7 @@
 <ng-container
   [m-clientMeta]="{ source: 'feed/discovery/search', medium: 'feed' }"
 >
-  <div class="m-tabs__container">
+  <div class="m-tabs__container" #tabsEl>
     <div class="m-tabs__tab">
       <a
         routerLink="./"
