--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -1,5 +1,5 @@
 <ng-template #searchBar>
-  <div class="m-v3Topbar__searchBox" *ngIf="showSearchBar">
+  <div class="m-v3Topbar__searchBox">
     <ng-content select="[search]"></ng-content>
   </div>
 </ng-template>
@@ -53,7 +53,7 @@
       class="m-pageLayout__pane--main"
       style="display:flex; flex-direction: row;"
     >
-      <div class="m-v3Topbar__middleColumn">
+      <div class="m-v3Topbar__middleColumn" *ngIf="showSearchBar">
         <ng-container *ngTemplateOutlet="searchBar"></ng-container>
       </div>
 
