(feat): add in tooltips for analytics and rename to tokens instead of global tokens - closes #4404

--- a/src/app/modules/analytics/global-tokens/global-tokens.component.html
+++ b/src/app/modules/analytics/global-tokens/global-tokens.component.html
@@ -1,5 +1,5 @@
 <div class="m-analyticsGlobalTokens__header">
-  <h1>Global Tokens</h1>
+  <h1>Tokens</h1>
   <div class="m-layout__spacer"></div>
   <m-wallet__tokenPriceBadge></m-wallet__tokenPriceBadge>
 </div>
@@ -79,7 +79,10 @@
     >
       <h3>
         <span>Emission breakdown</span>
-        <m-tooltip icon="info"></m-tooltip>
+        <m-tooltip icon="info"
+          >A summary of how many tokens are rewarded each day and how they are
+          allocated</m-tooltip
+        >
       </h3>
       <table>
         <thead>
