--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -138,12 +138,13 @@
           <li
             class="m-sidebarNavigation__item"
             [routerLinkActive]="'m-sidebarNavigation__item--active'"
+            *mIfFeature="'wallet-v3'"
           >
             <a
               routerLink="/analytics/dashboard/token"
               (click)="toggle()"
               i18n="@@ANALYTICS__TOKEN"
-              >Global Tokens</a
+              >Tokens</a
             >
           </li>
           <li
