--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -133,15 +133,11 @@
       padding-left: 15px;
     }
   }
-
-  .post-preview .mdl-spinner {
-    margin-left: 15px;
-  }
 }
 
 // ATTACHMENTS ----------------------
 
-m-commentPoster {
+.m-commentPoster {
   .m-attachmentPreviewWrapper--richEmbed {
     margin: 10px;
   }
@@ -161,7 +157,7 @@ m-commentPoster {
 
   .post-preview {
     position: relative;
-    margin: 10px;
+    padding: 10px;
   }
 
   .video-placeholder {
