--- a/src/app/modules/legacy/components/cards/user/user.html
+++ b/src/app/modules/legacy/components/cards/user/user.html
@@ -34,7 +34,8 @@
 
 <minds-button-subscribe
   [user]="user"
-  *ngIf="user.guid != session.getLoggedInUser().guid"
+  *ngIf="user.guid != session.getLoggedInUser().guid || forceShowSubscribe"
+  [preventSubscription]="forceShowSubscribe"
 ></minds-button-subscribe>
 
 <div
