--- a/src/app/modules/boost/modal/boost-modal.component.html
+++ b/src/app/modules/boost/modal/boost-modal.component.html
@@ -10,14 +10,26 @@
   <m-boostModal__tabs></m-boostModal__tabs>
 
   <div class="m-modalV2__footer">
-    <span i18n="@@BOOST_MODAL__"
-      >Become a <a href="/wallet" target="_blank">liquidity provider</a> for
-      automated boosting of your channel</span
-    >
+    <div>
+      <span
+        class="m-boostModal__footerText"
+        i18n="@@BOOST_MODAL__BECOME_A_LIQUIDITY_PROVIDER"
+        >Become a <a href="/wallet" target="_blank">liquidity provider</a> for
+        automated boosting of your channel</span
+      >
+      <span
+        *ngIf="(entityType$ | async) !== 'post'"
+        class="m-boostModal__footerText m-boostModal__footerText--primary"
+        i18n="@@BOOST_MODAL__WANT_TO_BOOST_POST"
+        >Want to Boost a Post? Go to
+        <a href="/{{ username }}" target="_blank">your channel</a> to get
+        started</span
+      >
+    </div>
     <m-button
       class="m-boostModal__boostButton"
       [disabled]="disabled$ | async"
-      (onAction)="(null)"
+      (onAction)="submitBoost()"
       [saving]="inProgress$ | async"
       [size]="'medium'"
       [color]="'blue'"
@@ -28,7 +40,7 @@
 </div>
 
 <ng-template #boostSubjectText>
-  <ng-container [ngSwitch]="subject$ | async">
+  <ng-container [ngSwitch]="entityType$ | async">
     <ng-container *ngSwitchCase="'post'" i18n="@@BOOST_MODAL__TITLE__POST">
       Boost Post
     </ng-container>
