--- a/src/app/modules/boost/modal/tabs/boost-modal-tabs.component.ng.scss
+++ b/src/app/modules/boost/modal/tabs/boost-modal-tabs.component.ng.scss
@@ -39,20 +39,26 @@
       flex-direction: column;
 
       .m-boostModal__mainPanelInput + * {
-        margin-top: 20px;
+        margin-top: 40px;
         display: block;
       }
     }
 
     .m-boostModal__contentDescriptionContainer {
-      max-width: 30%;
+      width: 250px;
 
       .m-boostModal__mainPanelDescription {
+        .m-boostModal__channelPreview {
+          margin-bottom: 20px;
+          display: block;
+        }
       }
+
       h1 {
         font-size: 18px;
         margin-top: unset;
         margin-bottom: 10px;
+        font-weight: 700;
 
         @include m-theme() {
           color: themed($m-textColor--primary);
@@ -60,7 +66,4 @@
       }
     }
   }
-
-  // m-boostModal__amountInput {
-  // }
 }
