(fix): group issues discovered on production - closes #4419 #4420

--- a/src/app/modules/composer/components/toolbar/toolbar.component.ng.scss
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.ng.scss
@@ -1,6 +1,8 @@
 @import 'defaults.scss';
 
 :host {
+  position: relative;
+
   .m-composerToolbar__action--post {
     margin-top: -4px;
     ::ng-deep .m-button__text--unsaved > * {
