--- a/src/app/modules/comments/comment/comment.component.ng.scss
+++ b/src/app/modules/comments/comment/comment.component.ng.scss
@@ -181,6 +181,7 @@
     vertical-align: middle;
     font-size: 16px;
     line-height: 20px;
+    white-space: pre-line;
   }
 
   .m-comment__attachment > * {
