--- a/src/app/modules/boost/modal/tabs/boost-modal-tabs.component.html
+++ b/src/app/modules/boost/modal/tabs/boost-modal-tabs.component.html
@@ -16,6 +16,7 @@
     [class.m-boostModalTabs__tabContainer--active]="
       (activeTab$ | async) === 'offer'
     "
+    data-cy="data-minds-boost-modal-offers-tab"
   >
     <span class="m-boostModalTabs__tab" i18n="@@BOOST_MODAL__TABS__NEWSFEED">
       Offer
