--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
@@ -25,6 +25,7 @@
   <button
     class="m-btn m-btn--slim m-boostButton"
     (click)="openBoostModal($event)"
+    data-cy="data-minds-activity-boost-button"
   >
     <span i18n="verb|@@M__ACTION__BOOST">Boost</span>
     <m-icon from="md" iconId="trending_up" [sizeFactor]="20"></m-icon>
