--- a/src/app/modules/boost/modal/boost-modal.component.html
+++ b/src/app/modules/boost/modal/boost-modal.component.html
@@ -34,6 +34,7 @@
         [saving]="inProgress$ | async"
         [size]="'medium'"
         [color]="'blue'"
+        data-cy="data-minds-boost-modal-boost-button"
       >
         <ng-container *ngTemplateOutlet="boostSubjectText"></ng-container>
       </m-button>
