--- a/src/app/modules/branding/branding.component.html
+++ b/src/app/modules/branding/branding.component.html
@@ -18,21 +18,29 @@
   <div class="m-branding__group">
     <h2 i18n="@@BRANDING__LOGO__TITLE">Logo Downloads</h2>
     <p i18n="@@BRANDING__LOGO__INTRO">
-      The logo is availavle in both PNG and SVG formats across both light and
+      The logo is available in both PNG and SVG formats across both light and
       dark modes as well as greyscale.
     </p>
 
     <div class="m-branding__grid">
       <div class="m-branding__gridItem">
         <div class="m-branding__gridItemImage">
-          <img src="/assets/branding/mindsLogoLight.svg" width="80%" alt="" />
+          <img
+            src="{{ cdnAssetsUrl }}assets/branding/mindsLogoLight.svg"
+            width="80%"
+            alt=""
+          />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/mindsLogoLight.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mindsLogoLight.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
-          <a href="/assets/branding/mindsLogoLight.svg" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mindsLogoLight.svg"
+            target="_blank"
             ><i class="material-icons">get_app</i>SVG</a
           >
         </div>
@@ -40,14 +48,22 @@
 
       <div class="m-branding__gridItem m-branding__gridItemDark">
         <div class="m-branding__gridItemImage">
-          <img src="/assets/branding/mindsLogoDark.svg" width="80%" alt="" />
+          <img
+            src="{{ cdnAssetsUrl }}assets/branding/mindsLogoDark.svg"
+            width="80%"
+            alt=""
+          />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/mindsLogoDark.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mindsLogoDark.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
-          <a href="/assets/branding/mindsLogoDark.svg" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mindsLogoDark.svg"
+            target="_blank"
             ><i class="material-icons">get_app</i>SVG</a
           >
         </div>
@@ -56,17 +72,21 @@
       <div class="m-branding__gridItem">
         <div class="m-branding__gridItemImage">
           <img
-            src="/assets/branding/mindsLogoBulbLight.svg"
+            src="{{ cdnAssetsUrl }}assets/branding/mindsLogoBulbLight.svg"
             width="90%"
             alt=""
           />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/mindsBulb.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mindsBulb.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
-          <a href="/assets/branding/mindsLogoBulbLight.svg" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mindsLogoBulbLight.svg"
+            target="_blank"
             ><i class="material-icons">get_app</i>SVG</a
           >
         </div>
@@ -75,17 +95,21 @@
       <div class="m-branding__gridItem m-branding__gridItemDark">
         <div class="m-branding__gridItemImage">
           <img
-            src="/assets/branding/mindsLogoBulbDark.svg"
+            src="{{ cdnAssetsUrl }}assets/branding/mindsLogoBulbDark.svg"
             width="90%"
             alt=""
           />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/mindsBulb.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mindsBulb.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
-          <a href="/assets/branding/mindsLogoBulbDark.svg" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mindsLogoBulbDark.svg"
+            target="_blank"
             ><i class="material-icons">get_app</i>SVG</a
           >
         </div>
@@ -106,14 +130,16 @@
         </div>
         <div class="m-branding__gridItemImage">
           <img
-            src="/assets/branding/mobileNewsfeedSmall.png"
+            src="{{ cdnAssetsUrl }}assets/branding/mobileNewsfeedSmall.png"
             width="80%"
             alt="Minds Newsfeed - iOS"
           />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/mobileNewsfeedLarge.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mobileNewsfeedLarge.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
         </div>
@@ -125,14 +151,16 @@
         </div>
         <div class="m-branding__gridItemImage">
           <img
-            src="/assets/branding/mobileDiscoverySmall.png"
+            src="{{ cdnAssetsUrl }}assets/branding/mobileDiscoverySmall.png"
             width="80%"
             alt="Minds Discovery - iOS"
           />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/mobileDiscoveryLarge.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mobileDiscoveryLarge.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
         </div>
@@ -144,14 +172,16 @@
         </div>
         <div class="m-branding__gridItemImage">
           <img
-            src="/assets/branding/mobileChannelSmall.png"
+            src="{{ cdnAssetsUrl }}assets/branding/mobileChannelSmall.png"
             width="80%"
             alt="Minds Channel - iOS"
           />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/mobileChannelLarge.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mobileChannelLarge.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
         </div>
@@ -163,14 +193,16 @@
         </div>
         <div class="m-branding__gridItemImage">
           <img
-            src="/assets/branding/mobileWalletSmall.png"
+            src="{{ cdnAssetsUrl }}assets/branding/mobileWalletSmall.png"
             width="80%"
             alt="Minds Wallet - iOS"
           />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/mobileWalletLarge.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/mobileWalletLarge.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
         </div>
@@ -191,14 +223,16 @@
         </div>
         <div class="m-branding__gridItemImage">
           <img
-            src="/assets/branding/webNewsfeedSmall.png"
+            src="{{ cdnAssetsUrl }}assets/branding/webNewsfeedSmall.png"
             width="80%"
             alt="Minds Newsfeed - Web"
           />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/webNewsfeedLarge.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/webNewsfeedLarge.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
         </div>
@@ -210,14 +244,16 @@
         </div>
         <div class="m-branding__gridItemImage">
           <img
-            src="/assets/branding/webDiscoverySmall.png"
+            src="{{ cdnAssetsUrl }}assets/branding/webDiscoverySmall.png"
             width="80%"
             alt="Minds Discovery - Web"
           />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/webDiscoveryLarge.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/webDiscoveryLarge.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
         </div>
@@ -229,14 +265,16 @@
         </div>
         <div class="m-branding__gridItemImage">
           <img
-            src="/assets/branding/webChannelSmall.png"
+            src="{{ cdnAssetsUrl }}assets/branding/webChannelSmall.png"
             width="80%"
             alt="Minds Channel - Web"
           />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/webChannelLarge.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/webChannelLarge.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
         </div>
@@ -248,14 +286,16 @@
         </div>
         <div class="m-branding__gridItemImage">
           <img
-            src="/assets/branding/webWalletSmall.png"
+            src="{{ cdnAssetsUrl }}assets/branding/webWalletSmall.png"
             width="80%"
             alt="Minds Wallet - Web"
           />
         </div>
 
         <div class="m-branding__gridItemActions">
-          <a href="/assets/branding/webWalletLarge.png" target="_blank"
+          <a
+            href="{{ cdnAssetsUrl }}assets/branding/webWalletLarge.png"
+            target="_blank"
             ><i class="material-icons">get_app</i> PNG</a
           >
         </div>
