(fix): use raw score for token balance of holding section - engine#1882

--- a/src/app/modules/wallet/components/tokens/rewards/rewards.component.html
+++ b/src/app/modules/wallet/components/tokens/rewards/rewards.component.html
@@ -340,7 +340,7 @@
         </td>
         <td colspan="3">
           <m-wallet__currencyValue
-            [value]="data.holding.score"
+            [value]="data.holding.raw_score"
             currency="tokens"
           ></m-wallet__currencyValue>
         </td>
