--- a/src/app/modules/notifications/notification.component.html
+++ b/src/app/modules/notifications/notification.component.html
@@ -44,7 +44,7 @@
 
   <!-- referral ping -->
   <ng-template ngSwitchCase="referral_ping">
-    <a [routerLink]="['/wallet/tokens/contributions']">
+    <a [routerLink]="['/settings/other/referrals']">
       <p i18n="@@NOTIFICATIONS__NOTIFICATION__REFERRAL_PING">
         Free tokens are waiting for you! Once you join the rewards program by
         setting up your Minds wallet, both you and
@@ -58,7 +58,7 @@
 
   <!-- referral pending -->
   <ng-template ngSwitchCase="referral_pending">
-    <a [routerLink]="['/wallet/tokens/referrals']">
+    <a [routerLink]="['/settings/other/referrals']">
       <p i18n="@@NOTIFICATIONS__NOTIFICATION__REFERRAL_PENDING">
         You have a pending referral!
         <span class="pseudo-link mdl-color-text--blue-grey-400">{{
@@ -72,7 +72,7 @@
 
   <!-- referral complete -->
   <ng-template ngSwitchCase="referral_complete">
-    <a [routerLink]="['/wallet/tokens/referrals']">
+    <a [routerLink]="['/settings/other/referrals']">
       <p i18n="@@NOTIFICATIONS__NOTIFICATION__REFERRAL_COMPLETE">
         You've earned tokens for the completed referral of
         <span class="pseudo-link mdl-color-text--blue-grey-400">{{
@@ -1469,7 +1469,7 @@
 
   <!-- Programs (queued) -->
   <ng-template ngSwitchCase="program_queued">
-    <a routerLink="/wallet">
+    <a routerLink="/wallet/cash">
       <p>
         <ng-container i18n="@@NOTIFICATIONS__NOTIFICATION__PROGRAM_QUEUED"
           >Your application for {{ notification.params.program }} program is
@@ -1481,7 +1481,7 @@
 
   <!-- Programs (accepted) -->
   <ng-template ngSwitchCase="program_accepted">
-    <a routerLink="/wallet">
+    <a routerLink="/wallet/cash">
       <p>
         <ng-container i18n="@@NOTIFICATIONS__NOTIFICATION__PROGRAM_ACCEPTED"
           >Your application for {{ notification.params.program }} program was
@@ -1493,7 +1493,7 @@
 
   <!-- Programs (declined) -->
   <ng-template ngSwitchCase="program_declined">
-    <a routerLink="/wallet">
+    <a routerLink="/wallet/cash">
       <p>
         <ng-container i18n="@@NOTIFICATIONS__NOTIFICATION__PROGRAM_DECLINED"
           >Your application for {{ notification.params.program }} program was
@@ -1505,7 +1505,7 @@
 
   <!-- Payouts (queued) -->
   <ng-template ngSwitchCase="payout_queued">
-    <a routerLink="/wallet/ledger">
+    <a routerLink="/wallet/cash/earnings">
       <p>
         <ng-container i18n="@@NOTIFICATIONS__NOTIFICATION__PAYOUT_QUEUED"
           >Your payment request for
@@ -1518,7 +1518,7 @@
 
   <!-- Payouts (accepted) -->
   <ng-template ngSwitchCase="payout_accepted">
-    <a routerLink="/wallet/ledger">
+    <a routerLink="/wallet/cash/earnings">
       <p>
         <ng-container i18n="@@NOTIFICATIONS__NOTIFICATION__PAYOUT_ACCEPTED"
           >Your payment request for
@@ -1531,7 +1531,7 @@
 
   <!-- Payouts (declined) -->
   <ng-template ngSwitchCase="payout_declined">
-    <a routerLink="/wallet/ledger">
+    <a routerLink="/wallet/cash/earnings">
       <p>
         <ng-container i18n="@@NOTIFICATIONS__NOTIFICATION__PAYOUT_DECLINED"
           >Your payment request for
@@ -1780,7 +1780,7 @@
   <ng-template ngSwitchCase="contributions"></ng-template>
 
   <ng-template ngSwitchCase="rewards_summary">
-    <a target="_blank" routerLink="/wallet/canary/tokens/transactions">
+    <a target="_blank" routerLink="/wallet/tokens/transactions">
       <p i18n="@@NOTIFICATIONS__NOTIFICATION__REWARDS__SUMMARY">
         Your activity yesterday earned you
         {{ notification.params.amount }} tokens. Nice job!
@@ -1789,7 +1789,7 @@
   </ng-template>
 
   <ng-template ngSwitchCase="rewards_reminder">
-    <a target="_blank" routerLink="/wallet/tokens/contributions">
+    <a target="_blank" routerLink="/wallet/tokens/transactions">
       <p i18n="@@NOTIFICATIONS__NOTIFICATION__REWARDS__YOU_HAVE_LEFT">
         You have {{ notification.params.left }} left to earn tokens today!
       </p>
