Updating boost modal to new channel card

--- a/src/app/common/components/channel-card/channel-card.component.html
+++ b/src/app/common/components/channel-card/channel-card.component.html
@@ -43,6 +43,7 @@
     <m-subscribeButton
       [user]="channel"
       [iconOnly]="btnIconOnly"
+      [disableSubscribe]="disableSubscribe"
     ></m-subscribeButton>
   </div>
   <!-- - SUBS ---------------------------- -->
