--- a/src/app/common/components/subscribe-button/subscribe-button.component.html
+++ b/src/app/common/components/subscribe-button/subscribe-button.component.html
@@ -5,6 +5,7 @@
   color="blue"
   [iconOnly]="iconOnly"
   title="Subscribe"
+  [disabled]="disableSubscribe"
 >
   <i class="material-icons">
     add
@@ -19,6 +20,7 @@
   size="xsmall"
   [iconOnly]="iconOnly"
   title="Unsubscribe"
+  [disabled]="disableSubscribe"
 >
   <i class="material-icons">
     close
