--- a/src/app/modules/boost/modal/tabs/boost-modal-tabs.component.html
+++ b/src/app/modules/boost/modal/tabs/boost-modal-tabs.component.html
@@ -104,11 +104,12 @@
           i18n="@@BOOST_MODAL__PLACED_IN_SIDEBAR"
           >Placement: Newsfeed Sidebar</span
         >
-        <minds-card
-          [object]="getLoggedInUser()"
-          class="mdl-card m-border"
-          [forceShowSubscribe]="true"
-        ></minds-card>
+        <m-channelCard
+          [channel]="getLoggedInUser()"
+          [showDescription]="false"
+          [showSubs]="false"
+          [disableSubscribe]="true"
+        ></m-channelCard>
       </div>
 
       <span *ngSwitchCaseDefault i18n="@@BOOST_MODAL__BOOST_YOUR_CONTENT"
