(fix): compose icon not rendering on production. Should use relative path

--- a/src/app/common/layout/sidebar/navigation.component.ng.scss
+++ b/src/app/common/layout/sidebar/navigation.component.ng.scss
@@ -301,7 +301,7 @@
 
 .m-sidebarNavigation__item--compose ::ng-deep {
   m-icon .m-icon__assetsFile {
-    background: url('/assets/icons/compose.svg');
+    background: url('../../../../assets/icons/compose.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
